<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laporan.laporankejahatan.Biodata">

    <LinearLayout


        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="135dp"
        tools:layout_editor_absoluteX="8dp">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/editTextKTP"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Identity Number/KTP"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="165dp" />

        <EditText
            android:layout_margin="15dp"
            android:id="@+id/editTextNama"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:hint="Nama"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="208dp" />

        <EditText
            android:id="@+id/editTextAlamat"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Alamat"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="165dp" />

        <EditText
            android:id="@+id/editTextNoTelp"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="No Telepon"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="165dp" />

        <EditText
            android:id="@+id/editTextUsia"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Usia"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="165dp" />

        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonSave"
            android:text="Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
