<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laporan.laporankejahatan.Login">

    <LinearLayout


        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="135dp"
        tools:layout_editor_absoluteX="8dp">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_margin="15dp"
            android:id="@+id/editTextEmail"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="208dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Enter your password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="165dp" />

        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonSignin"
            android:text="Sign In"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="center"
            android:text="Not have an account ? Sign up"
            android:id="@+id/textViewSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>


</android.support.constraint.ConstraintLayout>
